[package]
name = "dison"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Zero-copy JSON Display for T: Serialize"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
quickcheck = "1"
quickcheck_macros = "1"
